	PR tree-optimization/48611 	* tree-eh.c (note_eh_region_may_contain_throw): Don't propagate 	beyond ERT_MUST_NOT_THROW region.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@172783 138bc75d-0d04-0410-961f-82ee72b054a4